--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 
 .container {
    padding: 0 2rem;
-   font-family: 'Oswald', sans-serif !important;
+   font-family: 'Roboto Condensed', sans-serif !important;
 }
 
 .main {
