--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+
+*{
+   font-family: 'Roboto Condensed', sans-serif !important;
+   box-sizing: border-box;
+}
+
 html,
 body {
   padding: 0;
@@ -7,8 +14,4 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
 }
