--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap");
 
-*{
-   font-family: 'Roboto Condensed', sans-serif !important;
-   box-sizing: border-box;
+* {
+  font-family: "Roboto Condensed", sans-serif !important;
+  box-sizing: border-box;
 }
 
 html,
